<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.paging.ui.detail.DetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray"
        tools:context=".ui.detail.DetailFragment">

        <include
            android:id="@+id/book_list"
            style="@style/searchDetailStyle"
            layout="@layout/book_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bind:data="@{viewModel.liveData}"
            bind:layout_constraintEnd_toEndOf="parent"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_list">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_detail"
                style="@style/searchDetailStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title"
                        style="@style/detailTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_book_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{viewModel.liveData.title}"
                        app:layout_constraintTop_toBottomOf="@id/tv_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_detail_contents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/cons_detail_title">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_contents"
                        style="@style/detailTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_book_contents"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{viewModel.liveData.contents}"
                        app:layout_constraintTop_toBottomOf="@id/tv_contents" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_detail_authors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/cons_detail_contents">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_authors"
                        style="@style/detailTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_book_authors"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        arrayText="@{viewModel.liveData.authors}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_authors" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_detail_translator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:visibility="@{viewModel.liveData.translators.size() > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/cons_detail_authors">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_translator"
                        style="@style/detailTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_book_translator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        arrayText="@{viewModel.liveData.translators}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_translator" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_detail_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/cons_detail_translator">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_price"
                        style="@style/detailTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_book_price"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{@string/item_book_price_value(viewModel.liveData.getPriceComma(), viewModel.liveData.getSalePriceComma(), viewModel.liveData.status)}"
                        app:layout_constraintTop_toBottomOf="@id/tv_price" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_detail_sub_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/cons_detail_price">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sub_info"
                        style="@style/detailTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_book_sub_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{@string/item_book_sub_info_value(viewModel.liveData.publisher, viewModel.liveData.isbn)}"
                        app:layout_constraintTop_toBottomOf="@id/tv_sub_info" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_detail_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/cons_detail_sub_info">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_web"
                        style="@style/detailTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_book_web"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="@{() -> viewModel.goDetailPage(viewModel.liveData.url)}"
                        android:text="@{viewModel.liveData.url}"
                        android:textColor="@color/blue_text"
                        app:layout_constraintTop_toBottomOf="@id/tv_web" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    app:layout_constraintTop_toBottomOf="@id/cons_detail_web"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
